# mujin

./: .gitignore  .gitmodules  2026-06-27-HANDOVER-wip-transport-plugins.md  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  NodeEditor.json  README.md  ame_bt_events.jsonl  ame_plan_audit.jsonl  ame_wm_audit.jsonl  bt_events.jsonl  build.bat  build_ros2.bat  check_dlls.bat  check_dlls.ps1  conanfile.txt  cyclonedds_localhost.xml  import_domain.pddl  plan.md  run_direct.bat  run_direct.ps1  run_foxglove_bridge.bat  run_ros2.bat  run_ros2.ps1  run_ros2_with_foxglove.bat  socket_perf_err2.txt  socket_perf_err3.txt  socket_perf_out.txt  socket_perf_out2.txt  socket_perf_out3.txt  test  test_detail.xml  vehicle-autonomy.ameproj.json
cmake/pcl_coverage/: CMakeLists.txt
examples/: CMakeLists.txt  external_io_bridge_example.c  wm_container_example.c
examples/ada/: README.md  ada_active_find_e2e.adb  ada_active_find_e2e.gpr  ada_tobj_client.adb  ada_tobj_client.gpr  pcl_bindings.ads  pcl_component.adb  pcl_component.ads  pcl_component_tests.adb  pcl_component_tests.gpr  pcl_sensor_demo.gpr  tactical_objects_service.adb  tactical_objects_service.ads  tactical_objects_types.ads  test_generated_bindings.adb  test_generated_bindings.gpr  tobj_evidence_provider.adb  tobj_evidence_provider.ads  tobj_interest_client.adb  tobj_interest_client.ads
examples/cpp/: tobj_interest_client.cpp  tobj_interest_client.hpp
examples/dispatch/ada/: pyramid_data_model_base-codec_dispatch.ads  pyramid_data_model_common-codec_dispatch.adb  pyramid_data_model_common-codec_dispatch.ads  pyramid_data_model_tactical-codec_dispatch.adb  pyramid_data_model_tactical-codec_dispatch.ads
examples/dispatch/cpp/: pyramid_data_model_base_codec_dispatch.hpp  pyramid_data_model_common_codec_dispatch.cpp  pyramid_data_model_tactical_codec_dispatch.cpp
examples/flatbuffers/cpp/: pyramid_data_model_common_flatbuffers_codec.hpp  pyramid_data_model_tactical_flatbuffers_codec.hpp
examples/grpc/ada/: pyramid_components_tactical_objects_services_consumed-grpc_transport.ads
examples/json/ada/: pyramid_data_model_base-json_codec.adb  pyramid_data_model_common-json_codec.adb  pyramid_data_model_common-json_codec.ads  pyramid_data_model_tactical-json_codec.adb  pyramid_data_model_tactical-json_codec.ads
examples/json/cpp/: pyramid_data_model_base_json_codec.hpp  pyramid_data_model_common_json_codec.hpp  pyramid_data_model_tactical_json_codec.cpp  pyramid_data_model_tactical_json_codec.hpp
examples/protobuf/ada/: pyramid_data_model_base-protobuf_codec.ads  pyramid_data_model_common-protobuf_codec.ads  pyramid_data_model_tactical-protobuf_codec.ads
examples/protobuf/cpp/: pyramid_data_model_base_protobuf_codec.hpp  pyramid_data_model_common_protobuf_codec.hpp  pyramid_data_model_tactical_protobuf_codec.hpp
pyramid/tactical_objects/: ARCHITECTURE.md  CMakeLists.txt  DESIGN.md  HLR.md  HLR_COVERAGE.md  LLR.md  README.md  STREAMING_TODO.md  TDD_PLAN.md
pyramid/tactical_objects/include/: StandardBridge.h  StreamingCodec.h  TacticalObjectsCodec.h  TacticalObjectsComponent.h  TacticalObjectsRuntime.h
pyramid/tactical_objects/src/: StandardBridge.cpp  StreamingCodec.cpp  TacticalObjectsCodec.cpp  (+2 more)
ros2/: CMakeLists.txt  package.xml
ros2/launch/: ame_inprocess.launch.py  ame_multi_agent.launch.py  ame_multi_planner.launch.py  mujin_distributed.launch.py  mujin_inprocess.launch.py
ros2/msg/: Detection.msg  WorldState.msg
ros2/src/: agent_dispatcher_node.cpp  agent_dispatcher_node_main.cpp  combined_main.cpp  executor_node.cpp  executor_node_main.cpp  lifecycle_manager.cpp  lifecycle_manager_main.cpp  planner_node.cpp  planner_node_main.cpp  ros_wm_bridge.cpp  world_model_node.cpp  world_model_node_main.cpp
ros2/srv/: DispatchGoals.srv  LoadDomain.srv  QueryState.srv  SetFact.srv
ros2/test/: CMakeLists.txt  test_e2e_pyramid_service.cpp  test_executor_node.cpp  test_extension_wiring.cpp  test_full_pipeline.cpp  test_planner_node.cpp  test_world_model_node.cpp
src/: CMakeLists.txt  action_registry.cpp  bt_logger.cpp  executor_component.cpp  foxglove_bridge.cpp  main.cpp  pddl_parser.cpp  perception_bridge.cpp  plan_audit_log.cpp  plan_compiler.cpp  planner.cpp  planner_component.cpp  type_system.cpp  wm_audit_log.cpp  world_model.cpp  world_model_component.cpp  world_model_snapshot.cpp
src/ame/: CMakeLists.txt  bt_logger.cpp  executor_component.cpp  main.cpp  plan_audit_log.cpp  plan_compiler.cpp  world_model.cpp
src/bt_nodes/: check_world_predicate.cpp  execute_phase_action.cpp  invoke_service.cpp  set_world_predicate.cpp
src/pcl/: CMakeLists.txt  pcl_bridge.c  pcl_container.c  pcl_executor.c  pcl_internal.h  pcl_log.c  pcl_transport_socket.c
subprojects/PYRAMID/: CMakeLists.txt  README.md
tests/: CMakeLists.txt  test_action_registry.cpp  test_codec_dispatch_e2e.cpp  test_component_utils.hpp  test_e2e_pipeline.cpp  test_e2e_spatial_routing.cpp  test_executor_component.cpp  test_extensions.cpp  test_integration.cpp  test_multi_agent.cpp  test_observability.cpp  test_pcl_bridge.cpp  test_pcl_cpp_wrappers.cpp  test_pcl_dining.cpp  test_pcl_executor.cpp  test_pcl_lifecycle.cpp  test_pcl_log.cpp  test_pcl_oom.cpp  test_pcl_proto_bindings.cpp  test_pcl_robustness.cpp  test_pcl_socket_transport.cpp  test_pddl_parser.cpp  test_plan_compiler.cpp  test_planner.cpp  test_planner_component.cpp  test_world_model.cpp  test_world_model_component.cpp
tests/tactical_objects/: Test_CorrelationEngine.cpp  Test_InterestManager.cpp  Test_InterestManager_Matching.cpp  Test_MilClassEngine.cpp  Test_ObjectStore.cpp  Test_QueryEngine.cpp  Test_RelationshipIndex.cpp  Test_Runtime.cpp  Test_SpatialIndex.cpp  Test_StreamingCodec.cpp  Test_TacticalHistory.cpp  Test_TacticalObjectsCodec.cpp  Test_TacticalObjectsComponent.cpp  Test_TacticalObjectsComponent_HLR.cpp  Test_TacticalObjectsComponent_Robustness.cpp  Test_TacticalObjectsRuntime_Streaming.cpp  Test_TacticalObjects_E2E.cpp  Test_TacticalObjects_SocketE2E.cpp  Test_ZoneEngine.cpp  Test_ZonePerformance.cpp  standalone_bridge.cpp  tobj_socket_server.cpp
(+1415 files in other folders)
